<resources>
    <string name="app_name">ExerciseTrackerApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contrasena</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_register">Registrarse</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apellido">Apellido</string>
    <string name="prompt_edad">Edad</string>
    <string name="prompt_Genero">Genero</string>
    <string name="prompt_masculino">Masculino</string>
    <string name="prompt_femenino">Femenino</string>
    <string name="prompt_altura">Altura</string>
    <string name="prompt_peso">Peso</string>
    <string name="prompt_fechaNac">FechaNacimiento</string>
    <string name="prompt_passwordVal">Validar Contrasena</string>
    <string name="prompt_datosRegistro">Ingresar</string>
    <string name="prompt_ocupacion">Trabajo</string>


    <string name="label_horasSueno">Horas de sueño</string>
    <string name="hint_FechaSueno">Fecha</string>
    <string name="hint_HoraSueno">#h</string>
    <string name="label_totalHoras">Horas de sueño totales</string>
    <string name="label_caloriasQuemadas">Calorías Quemadas</string>
    <string name="hint_CantidadKCal">## KCal</string>
    <string name="hint_HorasSDiarias">#h</string>
    <string name="label_HorasSDiarias">Horas diarias de sueño</string>
    <string name="hint_HorasPromedio">#:##</string>
    <string name="label_HorasPromedio">Promedio de horas dormidas</string>


    <string name="label_Cancelar">Cancelar</string>
    <string name="label_Guardar">Guardar</string>

    <string name="label_PreguntaHorasDormir">¿Cuántas horas acostumbra dormir?</string>
    <string name="label_horasSuenoManual">Horas de sueño. Manual</string>

    <string name="label_PreguntaHorasDormirManual">¿Cuántas horas durmió?</string>
    <string name="label_PreguntaSiestas">Tiempo de siestas</string>

    <string name="regresar">"&lt;"</string>

    <string name="label_ComparacionCalorias">CALORÍAS CONSUMIDAS VS. GASTADAS </string>

    <string name="label_PeriodoTiempo">Periodo de tiempo</string>

    <string name="label_LimiteEjercicio">Límite de Ejericio</string>

    <string name="label_MetasEjercicio">Metas de Ejercicio </string>

    <string name="label_Calculo_IMC">Cálculo del IMC</string>

    <string name="label_Desempeno">Desempeño</string>

    <string name="label_Ejercicio">Ejercicio</string>
    <string name="label_SeleccionaEjercicio">Selecciona el tipo de ejercicio</string>

    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="periodoTiempo">
        <item>24hrs</item>
        <item>Semana</item>
        <item>Mes</item>
        <item>Año</item>
    </string-array>

    <!--Strings related to average of calories and burned calories registrarion -->
    <string name="lblTitleRegistarC">Registrar Calorías Quemadas</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="inicio">Inicio</string>
    <string name="calor_as_quemadas">  Calorías quemadas</string>
    <string name="calories">Calories</string>
    <string name="kcal">Kcal</string>
    <string name="im_genes">Imágenes - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="caloriessubtitle">---------------Comparativa en Kcal---------------</string>
    <string name="notas">Notas:</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="up">up</string>

    <string name="avgCalories">Promedio Calorías</string>
    <string name="titleAvgCalories">PROMEDIO DE CALORÍAS \n GASTADAS</string>
    <string name="avg">Promedio</string>
    <string name="numAverage">800</string>

    <string-array name="exercise">
        <item>Correr</item>
        <item>Caminar</item>
        <item>Pesas</item>
        <item>Bicicleta</item>
    </string-array>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_exercises">Ejercicio</string>
    <string name="menu_results">Resultados</string>
    <string name="menu_achievements">Logros</string>
    <string name="menu_routine">Rutina</string>
    <string name="menu_goals">Metas</string>
    <string name="menu_information">Información</string>

    <!-- Results -->
    <string name="lbl_Results">RESULTADOS</string>
    <string name="lbl_caloriasConsumidas">CALORÍAS CONSUMIDAS VS.   GASTADAS</string>
    <string name="calor_as_de_ejercicio">CALORÍAS DE EJERCICIO</string>
    <string name="promedio_de_calor_as_gastadas">PROMEDIO DE CALORÍAS GASTADAS</string>
    <string name="peso_perdido">PESO PERDIDO</string>
    <string name="todo">TODO</string>
    <string name="c_lculo_de_imc">CÁLCULO DE IMC</string>
    <string name="grafica">grafica</string>
    <string name="peso_perdido2">Peso perdido</string>
    <string name="historial">HISTORIAL</string>
    <string name="estado">Estado</string>
    <string name="peso_inicial">Peso inicial</string>
    <string name="kg">## Kg</string>
    <string name="meta">Meta</string>
    <string name="infA">Correr\n30/Octubre/19 8:00\n30 minutos</string>
    <string name="titleUS11">CALORÍAS GASTADAS POR EJERCICIO</string>
    <string name="infB">Cardio\n30/Octubre/19 13:00\n 30 minutos</string>
    <string name="calB">300 cal</string>
    <string name="infC">Correr \n30/Octubre/19 8:00\n 30 minutos</string>
    <string name="calD">300 cal</string>
    <string name="infD">Correr\n30/Octubre/19 8:00\n 30 minutos</string>
    <string name="calC">300 cal</string>
    <string name="calA">300 cal</string>

    <string name="label_fecha">Fecha</string>


    <string-array name="objetivos">
        <item>Objetivo de tiempo</item>
        <item>Objetivo de distancia</item>
        <item>Objetivo de repeticiones</item>
    </string-array>

    <string name="iniciar">Iniciar</string>
    <string name="detener">Pausar</string>
    <string name="fin">Finalizar</string>

    <!-- Strings para el registro de calorias-->
    <string name="label_PreguntaCaloriasConsumidas">¿Cuántas calorías consumió?</string>
    <string name="label_caloriasExtras">Calorías extras</string>
    <string name="label_caloriasTotales">Calorías totales consumidas</string>
    <string name="label_caloriasConsumidas">Calorías consumidas</string>
    <string name="label_promedioCalorias">Promedio de calorías</string>
    <string name="label_preguntaCalConsum">Cuántas calorías</string>

    <!-- Strings para el registro de peso-->
    <string name="label_PreguntaPeso">¿Cuál es su peso ideal?</string>

</resources>
