<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/profile_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre del Usuario" />

            <TextView
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo del Usuario" />

        </LinearLayout>

        <TextView
            android:id="@+id/label_Infogeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Información General" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_Genero" />

                <TextView
                    android:id="@+id/fechaNac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_fechaNac" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_altura" />

                <TextView
                    android:id="@+id/peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_peso" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/label_Trabajo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ocupación" />

        <TextView
            android:id="@+id/trabajoValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ocupacion" />

        <TextView
            android:id="@+id/label_Actividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nivel de Actividad" />

        <TextView
            android:id="@+id/actividadValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_ocupacion" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>